Dark Hose update

--- a/DarkHorse/DarkHorse.html
+++ b/DarkHorse/DarkHorse.html
@@ -18,7 +18,13 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="../1001NightsOfBacchus/1001nightsofbacchus.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../13thSon/13thSon1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="2Past1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../3StorySecretHistory/3StorySecretHistory.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="3x3Eyes1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AeonFlux/AeonFluxTV.jpg"></div>
+
 
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -39,13 +45,13 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 </p><p>
 <li><a href="../1001NightsOfBacchus/1001nightsofbacchus.html">1,001 Nights of Bacchus</a> (1993)
 <li><a href="../13thSon/13thSon.html">13th Son</a> (2005)
-<li>2 Past Midnight (2013)
+<li><a href="2Past1.jpg">2 Past Midnight</a> (2013)
 <li><a href="../3StorySecretHistory/3StorySecretHistory.html">3 Story: The Secret History of the Giant Man</a> (2009)
 <li><a href="../300/300.html">300</a>   (1998)
-<li>365 Samurai and a Few Bowls of Rice  (2009)
-<li>3x3 Eyes: Curse of the Gesu  (1995)
+<li><a href="../365Samurai/365Samurai.html">365 Samurai and a Few Bowls of Rice</a>  (2009)
+<li><a href="3x3Eyes1.jpg">3x3 Eyes</a> (1995)
 <li><a href="../47Ronin/47Ronin.html">47 Ronin</a> (2012)
-<li>9-11: Artists Respond  (2002)
+<li><a href="../911Artists/911Artists.html">9-11: Artists Respond</a> (2002)
 <li><a href="../AbeSapien/AbeSapien.html">Abe Sapien</a>  (2013)
 <li><a href="../AbeSapien/AbeSapien.html">Abe Sapien: Drums of the Dead</a> (1998)
 <li><a href="../AbeSapien/AbeSapien.html">Abe Sapien: The Abyssal Plain</a> (2010)
@@ -58,7 +64,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="../AdventuresLutherArkwright/AdventuresLutherArkwright.html">Adventures of Luther Arkwright</a> (1990)
 <li><a href="../SuperheroGirl/superherogirl.html">Adventures of Superhero Girl</a>  (2013)
 <li><a href="../AdventuresOfMask/AdventuresOfMask.html">Adventures of the Mask</a>  (1996)
-<li>Aeon Flux  (2005)
+<li><a href="../AeonFlux/aeonflux.html">Aeon Flux</a> (2005)
 <li>Age of Reptiles  (1993)
 <li>Age of Reptiles: Ancient Egyptians  (2015)
 <li>Age of Reptiles: The Hunt   (1996)
@@ -796,165 +802,165 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li>Star Wars: Episode III – Revenge of the Sith    #1-4    May (2005)
 <li>Star Wars – Free Comic Book Day 2005 Special    nn  May (2005)
 <li>Star Wars – Free Comic Book Day 2006 Special    nn  May (2006)
-<li>Star Wars: General Grievous     #1-4    Mar – Jun (2005)
-<li>Star Wars Handbook  nn  Jul (1998)
-<li>Star Wars Hasbro/Toys "R" Us Exclusive  #1-4    May (2002)
-<li>Star Wars: Heir to the Empire   #1-6    Oct 1995 – Apr (1996)
-<li>Star Wars: Infinities – A New Hope  #1-4    May – Oct (2001)
-<li>Star Wars: Infinities – Return of the Jedi  #1-4    Nov 2003 – Mar (2004)
-<li>Star Wars: Infinities – The Empire Strikes Back     #1-4    Jul – Oct (2002)
-<li>Star Wars: Invasion – Refugees  #0-5    Jul – Nov (2009)
-<li>Star Wars: Invasion Rescues     #1-6    May – Dec (2010)
-<li>Star Wars: Jabba the Hut    #1  Apr (1995)
-<li>Star Wars: Jabba the Hut – Betrayal     nn  Feb (1996)
-<li>Star Wars: Jabba the Hut – The Dynasty Trap     nn  Aug (1995)
-<li>Star Wars: Jabba the Hut – The Hunger of Princess Nampi     nn  Jun (1995)
-<li>Star Wars: Jango Fett   nn  Jan (2002)
-<li>Star Wars: Jango Fett — Open Seasons    #1-4    Apr – Jul (2002)
+<li>Star Wars: General Grievous  (2005)
+<li>Star Wars Handbook  (1998)
+<li>Star Wars Hasbro/Toys "R" Us Exclusive   (2002)
+<li>Star Wars: Heir to the Empire  (1996)
+<li>Star Wars: Infinities – A New Hope   (2001)
+<li>Star Wars: Infinities – Return of the Jedi(2004)
+<li>Star Wars: Infinities – The Empire Strikes Back (2002)
+<li>Star Wars: Invasion – Refugees  (2009)
+<li>Star Wars: Invasion Rescues    (2010)
+<li>Star Wars: Jabba the Hut  (1995)
+<li>Star Wars: Jabba the Hut – Betrayal    (1996)
+<li>Star Wars: Jabba the Hut – The Dynasty Trap   (1995)
+<li>Star Wars: Jabba the Hut – The Hunger of Princess Nampi  (1995)
+<li>Star Wars: Jango Fett   (2002)
+<li>Star Wars: Jango Fett — Open Seasons   (2002)
 <li>Star Wars: Jedi – Aayla Secura  nn  Aug (2003)
-<li>Star Wars: Jedi Academy – Leviathan     #1-4    Oct 1998 – Jan (1999)
-<li>Star Wars: Jedi Council: Acts of War    #1-4    Jun – Sep (2000)
-<li>Star Wars: Jedi – Count Dooku   nn  Nov (2003)
-<li>Star Wars: Jedi – Mace Windu    nn  Feb (2003)
-<li>Star Wars: Jedi Quest   #1-4    Sep – Dec (2001)
-<li>Star Wars: Jedi – Shaak Ti  nn  May (2003)
-<li>Star Wars: Jedi vs. Sith    #1-6    Apr – Sep (2001)
-<li>Star Wars: Jedi – Yoda  nn  Jun (2004)
-<li>Star Wars Knights of the Old Republic   #1-50   Jan 2006 – Feb (2010)
-<li>Star Wars Knights of the Old Republic Handbook  #1  Nov (2007)
-<li>Star Wars Knights of the Old Republic/Rebellion     #0  Mar (2006)
-<li>Star Wars: Legacy   #0-50   Jun 2006 – Aug (2010)
-<li>Star Wars: Mara Jade    #1-6    Aug 1998 – Jan (1999)
-<li>Star Wars: Obsession    #1-5    Nov 2004 – Apr (2005)
-<li>Star Wars: Panel to Panel   nn  Sep (2004)
-<li>Star Wars: Purge    nn  Dec (2005)
-<li>Star Wars: Qui-Gon &amp;Obi-Wan – Last Stand on Ord Mantell     #1-3    Dec 2000 – Mar (2001)
-<li>Star Wars: Qui-Gon &amp;Obi-Wan – The Aurorient Express     #1-2    Feb – May (2002)
-<li>Star Wars: Rebellion    #1-16 (#41-56)  Apr 2006 – Aug (2008)
-<li>Star Wars: Republic     #46-83  Sep 2002 – Feb (2006)
-<li>Star Wars: River of Chaos   #1-4    Jun – Nov (1995)
-<li>Star Wars: Shadows of the Empire    #1-6    May – Oct (1996)
-<li>Star Wars: Shadows of the Empire — Evolution    #1-5    Feb – Jun (1998)
-<li>Star Wars: Shadow Stalker   nn  Sep (1997)
-<li>Star Wars: Splinter of the Mind's Eye   #1-4    Dec 1995 – Jun (1996)
-<li>Star Wars: Starfighter — Crossbones     #1-3    Jan – Mar (2002)
-<li>Star Wars: Tag &amp;Bink Are Dead   #1-2    Oct – Nov (2001)
-<li>Star Wars: Tag &amp;Bink II     #1-2    Mar – Apr (2006)
-<li>Star Wars Tales     #1-24   Sep 1999 – Jul (2005)
-<li>Star Wars Tales – A Jedi's Weapon   nn  May (2002)
-<li>Star Wars: Tales from Mos Eisley    nn  Mar (1996)
-<li>Star Wars: Tales of the Jedi    #1-5    Oct 1993 – Feb (1994)
-<li>Star Wars: Tales of the Jedi—Dark Lords of the Sith, Book One   #1-6    Oct 1994 – Mar (1995)
-<li>Star Wars: Tales of the Jedi — Redemption   #1-5    Jul – Nov (1998)
-<li>Star Wars: Tales of the Jedi – The Fall of the Sith Empire  #1-5    Jun – Oct (1997)
-<li>Star Wars: Tales of the Jedi—The Freedon Nadd Uprising  #1-2    Aug – Sep (1994)
-<li>Star Wars: Tales of the Jedi – The Golden Age of the Sith   #0  Feb (1997)
-<li>Star Wars: Tales of the Jedi—The Sith War   #1-6    Aug 1995 – Jan (1996)
-<li>Star Wars: The Bounty Hunters—Aurra Sing one-shot   nn  Jul (1999)
-<li>Star Wars—The Bounty Hunters: Kenix Kil one-shot    nn  Oct (1999)
-<li>Star Wars: The Bounty Hunters—Scoundrel's Wages     nn  Aug (1999)
-<li>Star Wars: The Clone Wars   #1-12   Sep 2008 – Jan (2010)
-<li>Star Wars: The Clone Wars–Shipyards of Doom     nn  Sep (2008)
-<li>Star Wars: The Force Unleashed  nn  Aug (2008)
-<li>Star Wars: The Jabba Tape   nn  Dec (1998)
-<li>Star Wars: The Last Command     #1-6    Nov 1997 – Jul (1998)
-<li>Star Wars: The Protocol Offensive   nn  Sep (1997)
-<li>Star Wars: Underworld – The Yavin Vassilika     #1-5    Dec 2000 – Jun (2001)
-<li>Star Wars: Union    #1-4    Nov 1999 – Feb (2000)
-<li>Star Wars: Vader's Quest    #1-4    Feb – May (1999)
-<li>Star Wars Visionaries   nn  Apr (2005)
-<li>Star Wars: X-Wing Rogue Squadron    #1-35   Jul 1995 – Nov (1998)
-<li>Star Wars X-Wing Rogue Squadron: Rogue Leader   #1-3    Sep – Nov (2005)
-<li>Star Wars: Zam Wesell   nn  Mar (2002)
-<li>Starship Troopers   #1-2    undated (Oct – Nov 1997) 
-<li>Starship Troopers: Brute Creations  nn  undated (Sep 1997) 
-<li>Starship Troopers: Dominant Species     #1-4    Aug – Nov (1998)
-<li>Starship Troopers: Insect Touch     #1-3    undated (May – Aug 1997) 
-<li>Strain  #1-12   Dec 2011 – Feb (2013)
-<li>Strain: The Fall    #1-9    Jul 2013 – Mar (2014)
-<li>Strain: The Night Eternal   #1-12   Aug 2014 – Jul (2015)
-<li>SubHuman    #1-4    Nov 1998 – Feb (1999)
-<li>Superman Aliens 2: God War  #1-3    May – Sep (2002)
-<li>Superman and Batman vs. Aliens and Predator     #1-2    undated (Jan – Feb 2(007))
-<li>Superman/Madman Hullabaloo!     #1-3    Jun – Aug (1997)
-<li>Superman/Tarzan: Sons of the Jungle     #1-3    Oct 2001 – May (2002)
-<li>Superman vs. Aliens     #1-3    Jul – Sep (1995)
-<li>Superman vs. Predator   #1-4    undated (May – Jul 2000) 
-<li>Superman vs. The Terminator: Death to the Future    #1-4    Dec 1999 – Mar (2000)
-<li>Syn     #1-5    Aug 2003 – Feb (2004)
-<li>Tale of One Bad Rat     #1-4    Oct 1994 – Jan (1995)
-<li>Tales of the Fear Agent: Twelve Steps in One    nn (#16)    Oct (2007)
-<li>Tales of the Vampires   #1-5    Dec 2003 – Apr (2004)
-<li>Tales to Offend     #1  Jul (1997)
-<li>Tank Girl   #1-4    May – Aug (1991)
-<li>Tank Girl 2     #1-4    Jun – Sep (1993)
-<li>Tarzan  #1-20   Jul 2, 1996 – Mar 3, (1998)
-<li>Tarzan/Carson of Venus  #1-4    May 27 – Aug 26 (1998)
-<li>Tarzan/John Carter: Warlords of Mars    #1-4    Jan – Jun 28 (1996)
-<li>Tarzan the Savage Heart     #1-4    Apr 7 – Jul 30 (1999)
-<li>Tarzan vs. Predator at the Earth's Core     #1-4    Jan – Jun 18 (1996)
-<li>Tenth: Resurrected  #1-4    Jul 2001 – Jan (2002)
-<li>Terminator  #1-4    Aug – Nov (1990)
-<li>Terminator: Endgame     #1-3    Sep – Oct (1992)
-<li>Terminator: Hunters and Killers     #1-3    Mar – May (1992)
+<li>Star Wars: Jedi Academy – Leviathan    (1999)
+<li>Star Wars: Jedi Council: Acts of War  (2000)
+<li>Star Wars: Jedi – Count Dooku    (2003)
+<li>Star Wars: Jedi – Mace Windu  (2003)
+<li>Star Wars: Jedi Quest   (2001)
+<li>Star Wars: Jedi – Shaak Ti  (2003)
+<li>Star Wars: Jedi vs. Sith    (2001)
+<li>Star Wars: Jedi – Yoda   (2004)
+<li>Star Wars Knights of the Old Republic   (2010)
+<li>Star Wars Knights of the Old Republic Handbook(2007)
+<li>Star Wars Knights of the Old Republic/Rebellion    (2006)
+<li>Star Wars: Legacy  (2010)
+<li>Star Wars: Mara Jade   (1999)
+<li>Star Wars: Obsession   (2005)
+<li>Star Wars: Panel to Panel    (2004)
+<li>Star Wars: Purge   (2005)
+<li>Star Wars: Qui-Gon &amp;Obi-Wan – Last Stand on Ord Mantell (2001)
+<li>Star Wars: Qui-Gon &amp;Obi-Wan – The Aurorient Express   (2002)
+<li>Star Wars: Rebellion  (2008)
+<li>Star Wars: Republic    (2006)
+<li>Star Wars: River of Chaos   (1995)
+<li>Star Wars: Shadows of the Empire   (1996)
+<li>Star Wars: Shadows of the Empire — Evolution (1998)
+<li>Star Wars: Shadow Stalker  (1997)
+<li>Star Wars: Splinter of the Mind's Eye    (1996)
+<li>Star Wars: Starfighter — Crossbones   r (2002)
+<li>Star Wars: Tag &amp;Bink Are Dead  (2001)
+<li>Star Wars: Tag &amp;Bink II  (2006)
+<li>Star Wars Tales   (2005)
+<li>Star Wars Tales – A Jedi's Weapon y (2002)
+<li>Star Wars: Tales from Mos Eisley   (1996)
+<li>Star Wars: Tales of the Jedi    (1994)
+<li>Star Wars: Tales of the Jedi—Dark Lords of the Sith, Book One   (1995)
+<li>Star Wars: Tales of the Jedi — Redemption   (1998)
+<li>Star Wars: Tales of the Jedi – The Fall of the Sith Empire  (1997)
+<li>Star Wars: Tales of the Jedi—The Freedon Nadd Uprising  (1994)
+<li>Star Wars: Tales of the Jedi – The Golden Age of the Sith (1997)
+<li>Star Wars: Tales of the Jedi—The Sith War  (1996)
+<li>Star Wars: The Bounty Hunters—Aurra Sing one-shot  (1999)
+<li>Star Wars—The Bounty Hunters: Kenix Kil one-shot   (1999)
+<li>Star Wars: The Bounty Hunters—Scoundrel's Wages   (1999)
+<li>Star Wars: The Clone Wars   (2008)
+<li>Star Wars: The Clone Wars–Shipyards of Doom  (2008)
+<li>Star Wars: The Force Unleashed  (2008)
+<li>Star Wars: The Jabba Tape  (1998)
+<li>Star Wars: The Last Command     (1998)
+<li>Star Wars: The Protocol Offensive   (1997)
+<li>Star Wars: Underworld – The Yavin Vassilika   (2000)
+<li>Star Wars: Union    (1999)
+<li>Star Wars: Vader's Quest  (1999)
+<li>Star Wars Visionaries   (2005)
+<li>Star Wars: X-Wing Rogue Squadron   (1998)
+<li>Star Wars X-Wing Rogue Squadron: Rogue Leader   (2005)
+<li>Star Wars: Zam Wesell  (2002)
+<li>Starship Troopers  (1997) 
+<li>Starship Troopers: Brute Creations  (1997) 
+<li>Starship Troopers: Dominant Species  (1998)
+<li>Starship Troopers: Insect Touch    (1997) 
+<li>Strain  (2013)
+<li>Strain: The Fall   (2014)
+<li>Strain: The Night Eternal (2015)
+<li>SubHuman   (1998)
+<li>Superman Aliens 2: God War (2002)
+<li>Superman and Batman vs. Aliens and Predator (2007))
+<li>Superman/Madman Hullabaloo!   (1997)
+<li>Superman/Tarzan: Sons of the Jungle (2001)
+<li>Superman vs. Aliens    (1995)
+<li>Superman vs. Predator (2000) 
+<li>Superman vs. The Terminator: Death to the Future  (2000)
+<li>Syn    (2004)
+<li>Tale of One Bad Rat   (1995)
+<li>Tales of the Fear Agent: Twelve Steps in One    (2007)
+<li>Tales of the Vampires   (2004)
+<li>Tales to Offend    (1997)
+<li>Tank Girl    (1991)
+<li>Tank Girl 2     (1993)
+<li>Tarzan   (1998)
+<li>Tarzan/Carson of Venus  (1998)
+<li>Tarzan/John Carter: Warlords of Mars     (1996)
+<li>Tarzan the Savage Heart     (1999)
+<li>Tarzan vs. Predator at the Earth's Core     (1996)
+<li>Tenth: Resurrected   (2002)
+<li>Terminator  (1990)
+<li>Terminator: Endgame   (1992)
+<li>Terminator: Hunters and Killers      (1992)
 <li>Terminator: One Shot    nn  Jul (1991)
-<li>Terminator: Secondary Objectives    #1-4    Jul – Oct (1991)
-<li>Terminator: The Dark Years  #1-4    Aug – Dec (1999)
-<li>Terminator: The Enemy Within    #1-4    Nov 1991 – Feb (1992)
+<li>Terminator: Secondary Objectives    t (1991)
+<li>Terminator: The Dark Years   (1999)
+<li>Terminator: The Enemy Within   (1992)
 <li>Territory   #1-4    Jan – Apr (1999)
-<li>Thing (From Another World)  #1-2    undated (Dec 1991 – Jan 1992) 
-<li>Thing from Another World: Climate of Fear   #1-4    Jul – Dec (1992)
-<li>Thing from Another World: Eternal Vows  #1-4    Dec 1993 – Mar (1994)
-<li>Thirteen O'Clock    nn  Dec (1992)
-<li>Timecop     #1-2    Sep – Nov (1994)
-<li>Titan A.E.  #1-3    May – Jul (2000)
-<li>Titan Special   #1  Jun (1994)
-<li>Tongue*Lash     #1-2    Aug – Sep (1996)
-<li>Tongue*Lash II  #1-2    Feb – Mar (1999)
-<li>Tony Millionaire's Sock Monkey  #1-2    Jul – Aug (1999)
-<li>Torch of Liberty Special    nn  Jan (1995)
-<li>Trekker     #1-6    May 1987 – Mar (1988)
-<li>Trekker Color Special   #1  undated (Jul 1989) 
-<li>Trigun Anime Manga: Wolfwood    nn  undated (2003) 
-<li>Truth   nn  Aug (1999)
-<li>Ultraman Tiga   #1-10   Aug 2003 – Jun (2004)
-<li>Umbrella Academy: Apocalypse Suite  #1-6    Sep 2007 – Feb (2008)
-<li>Umbrella Academy: Dallas    #1-6    Nov 2008 – Apr (2009)
-<li>Urban Legends   #1  Jun (1993)
-<li>Usagi Yojimbo   #1-current  Apr (1996)
-<li>Usagi Yojimbo Color Special (#4) – Green Persimmon  nn  Jul (1997)
-<li>Van Helsing: From Beneath the Rue Morgue    nn  Apr (2004)
-<li>Venus Wars  #1-14   Apr 1991 – May (1992)
-<li>Venus Wars II   #1-15   Jun 1992 – Aug (1993)
-<li>Virus   #1-4    undated (Dec 1992 – Aug 1993) 
-<li>Wacky Squirrel  #1-4    Oct 1987 – Oct (1988)
-<li>Walter  #1-4    Feb – May (1996)
-<li>Warrior of Waverly Street   #1-2    Nov – Dec (1996)
-<li>Who Wants to Be a Superhero? Free Comics Book Day Preview   nn  May (2007)
-<li>Will to Power   #1-12   Jun – Aug (1994)
-<li>Witchblade/Aliens/The Darkness/Predator     #1-3    Nov 2000 – Feb (2001)
-<li>Wolf &amp;Red   #1-3    Apr – Jun (1995)
-<li>World Below     #1-4    Mar – Jun (1999)
-<li>World Below: Deeper and Stranger    #1-4    Dec 1999 – Mar (2000)
-<li>Wyrd    #1-in   January (2019)
-<li>X   #1-25   Feb 1994 – Apr (1996)
-<li>X/Hero Illustrated Special  #1-2    Jun (1994)
-<li>X: One Shot to the Head     nn  Aug (1994)
-<li>Xena: Warrior Princess  #1-14   Sep 1999 – Oct (2000)
-<li>Xena: Warrior Princess – Blood and Shadows  nn  Jan (2001)
+<li>Thing (From Another World)  (1991)
+<li>Thing from Another World: Climate of Fear   (1992)
+<li>Thing from Another World: Eternal Vows   (1994)
+<li>Thirteen O'Clock     (1992)
+<li>Timecop     (1994)
+<li>Titan A.E.   (2000)
+<li>Titan Special    (1994)
+<li>Tongue*Lash     (1996)
+<li>Tongue*Lash II  (1999)
+<li>Tony Millionaire's Sock Monkey  (1999)
+<li>Torch of Liberty Special  (1995)
+<li>Trekker   (1987)
+<li>Trekker Color Special   (1989) 
+<li>Trigun Anime Manga: Wolfwood     (2003) 
+<li>Truth    (1999)
+<li>Ultraman Tiga   (2004)
+<li>Umbrella Academy: Apocalypse Suite  (2008)
+<li>Umbrella Academy: Dallas  (2009)
+<li>Urban Legends  (1993)
+<li>Usagi Yojimbo  (1996)
+<li>Usagi Yojimbo Color Special  (1997)
+<li>Van Helsing: From Beneath the Rue Morgue    (2004)
+<li>Venus Wars  (1992)
+<li>Venus Wars II (1993)
+<li>Virus  (1992)
+<li>Wacky Squirrel   (1988)
+<li>Walter   (1996)
+<li>Warrior of Waverly Street   (1996)
+<li>Who Wants to Be a Superhero? Free Comics Book Day Preview   (2007)
+<li>Will to Power  (1994)
+<li>Witchblade/Aliens/The Darkness/Predator     (2001)
+<li>Wolf &amp;Red   (1995)
+<li>World Below     (1999)
+<li>World Below: Deeper and Stranger   (2000)
+<li>Wyrd   (2019)
+<li>X    (1996)
+<li>X/Hero Illustrated Special  (1994)
+<li>X: One Shot to the Head    (1994)
+<li>Xena: Warrior Princess  (2000)
+<li>Xena: Warrior Princess – Blood and Shadows  (2001)
 <li>Xena: Warrior Princess – Slave  nn  Oct (2000)
-<li>Xena: Warrior Princess – The Warrior Way of Death   nn  Jun (2000)
-<li>You Deserved It     nn  Oct (2005)
-<li>You're Under Arrest     #1-8    Dec 1995 – Jul (1996)
-<li>Young Cynics' Club  nn  Mar (1993)
-<li>Young Indiana Jones Chronicles  #1-12   Feb 1992 – Feb (1993)
-<li>Zero Killer     #1-6    Jul 2007 – Oct (2009)
-<li>ZombieWorld: Champion of the Worms  #1-3    Sep – Nov (1997)
-<li>ZombieWorld: Dead End   #1-2    Jan – Feb (1998)
-<li>ZombieWorld: Eat Your Heart Out     nn  Apr (1998)
-<li>ZombieWorld: Home for the Holidays  nn  Dec (1997)
-<li>ZombieWorld: Tree of Death  #1-4    Jun – Oct (1999)
-<li>ZombieWorld: Winter Dregs   #1-4    May – Aug (1998)
+<li>Xena: Warrior Princess – The Warrior Way of Death  (2000)
+<li>You Deserved It  (2005)
+<li>You're Under Arrest    (1996)
+<li>Young Cynics' Club   (1993)
+<li>Young Indiana Jones Chronicles   (1993)
+<li>Zero Killer   (2009)
+<li>ZombieWorld: Champion of the Worms (1997)
+<li>ZombieWorld: Dead End   (1998)
+<li>ZombieWorld: Eat Your Heart Out   (1998)
+<li>ZombieWorld: Home for the Holidays  (1997)
+<li>ZombieWorld: Tree of Death   (1999)
+<li>ZombieWorld: Winter Dregs    (1998)
 <li>Zone  (1990)
 
 </p>
