American Gothic Press

--- a/index.html
+++ b/index.html
@@ -1743,6 +1743,13 @@
 </tr>
 
 <tr>
+<td>American Gothic Press</td>
+<td>2015</td>
+<td>Publisher</td>
+<td><a href="AmericanGothicPress/AmericanGothicPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>American Greetings</td>
 <td>1906</td>
 <td>Publisher</td>
