--- a/index.html
+++ b/index.html
@@ -10087,6 +10087,13 @@
 </tr>
 
 <tr>
+<td>King Cat</td>
+<td>1989</td>
+<td>John Porcellino</td>
+<td><a href="KingCat/KingCat.html">Details</a></td>
+</tr>
+
+<tr>
 <td>King City</td>
 <td>1980</td>
 <td>Tokyopop</td>
@@ -16449,6 +16456,13 @@
 <td>1993</td>
 <td>Marvel</td>
 <td><a href="Terrarists/Terrarists.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Terrificolor</td>
+<td>1974</td>
+<td>Elvifrance</td>
+<td><a href="Terrificolor/Terrificolor.html">Details</a></td>
 </tr>
 
 <tr>
