--- a/index.html
+++ b/index.html
@@ -4924,6 +4924,13 @@
 </tr>
 
 <tr>
+<td>Crow</td>
+<td>1989</td>
+<td>Caliber</td>
+<td><a href="Crow/Crow.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Crown Comics</td>
 <td>1945</td>
 <td>McCombs</td>
