--- a/TMNT/TMNT.html
+++ b/TMNT/TMNT.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Teenage Mutant Ninja Turtles</title>
 </head>
 
@@ -11,6 +12,32 @@
 Creators: Keven Eastman, Peter Laird<br>
 Publisher: Mirage Studios 1984, Nickelodeon 2009<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="TMNT1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TMNT2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TMNT3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TMNT4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TMNT5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TMNT6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TMNT7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TMNT8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TMNT9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TMNT10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TMNT11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TMNT12.jpg"></div>
+
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 The series originated in comic books published by Mirage Studios and expanded into cartoon series, films, video games, toys, and other merchandise. The franchise's became popular, and it gained worldwide success and fame worth over 7.1 Billion US Dollars.
 </p><p>
 The Teenage Mutant Ninja Turtles first appeared in an American comic book published by Mirage Studios in 1984 in Dover, New Hampshire. The concept arose from a humorous drawing sketched out by Eastman during a casual evening of brainstorming and bad television with Laird. Using money from a tax refund, together with a loan from Eastman’s uncle, the young artists self-published a single-issue comic intended to parody four of the most popular comics of the early 1980s: Marvel Comics’ Daredevil and New Mutants, Dave Sim’s Cerebus, and Frank Miller’s Ronin. The TMNT comic book series has been published in various incarnations by various comic book companies since 1984.
@@ -23,6 +50,13 @@ Once the product started selling, the show got syndicated and picked up and back
 </p><p>
 On October 21, 2009, it was announced that cable channel Nickelodeon (a subsidiary of Viacom) had purchased all of Mirage's rights to the Teenage Mutant Ninja Turtles property. Mirage retains the rights to publish 18 issues a year, though the future involvement of Mirage with the Turtles and the future of Mirage Studios itself is unknown. Nickelodeon has developed a new CGI-animated TMNT television series and partnered with fellow Viacom company Paramount Pictures to bring a new TMNT movie to theaters. The TV show premiered on Nickelodeon on September 29, 2012. The live-action film, produced by Platinum Dunes, Nickelodeon Movies, and Paramount Pictures, directed by Jonathan Liebesman, and produced by Michael Bay, was released on August 8, 2014.
 </p><p>
+Comics:<ul>
+<li>Teenage Mutant Ninja Turtles (Mirage Studios)</li>
+<li>Tales of the Teenage Mutant Ninja Turtles (Mirage Studios)</li>
+<li>Teenage Mutant Ninja Turtles Adventures (Archie Comics)</li>
+<li>Teenage Mutant Ninja Turtles (Creators Syndicate comic strip)</li>
+<li>Teenage Mutant Ninja Turtles (IDW Publishing)</li>
+</ul>
 Films:<ul>
 <li>Teenage Mutant Ninja Turtles (1990)</li>
 <li>Teenage Mutant Ninja Turtles II: The Secret of the Ooze (1991)</li>
@@ -40,13 +74,6 @@ Video Games:<ul>
 <li>TMNT (2007 Game Boy Advance)</li>
 <li>TMNT (2007 GameCube, NDS, PC, PS2, PSP, Wii, Xbox 360)</li>
 <li>Teenage Mutant Ninja Turtles (2014 Android, iOS, 3DS)</li>
-</ul>
-Comics:<ul>
-<li>Teenage Mutant Ninja Turtles (Mirage Studios)</li>
-<li>Tales of the Teenage Mutant Ninja Turtles (Mirage Studios)</li>
-<li>Teenage Mutant Ninja Turtles Adventures (Archie Comics)</li>
-<li>Teenage Mutant Ninja Turtles (Creators Syndicate comic strip)</li>
-<li>Teenage Mutant Ninja Turtles (IDW Publishing)</li>
 </ul>
 </p>
 </body>
