--- a/index.html
+++ b/index.html
@@ -1082,6 +1082,13 @@
 </tr>
 
 <tr>
+<td>Air Fighters</td>
+<td>1941</td>
+<td>Hillman</td>
+<td><a href="AirFighters/AirFighters.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Air Raiders</td>
 <td>1987</td>
 <td>Marvel</td>
@@ -8676,6 +8683,13 @@
 <td>2016</td>
 <td>Albatross</td>
 <td><a href="Hillbilly/Hillbilly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hillman</td>
+<td>1938</td>
+<td>Publisher</td>
+<td><a href="Hillman/Hillman.html">Details</a></td>
 </tr>
 
 <tr>
