--- a/index.html
+++ b/index.html
@@ -1089,6 +1089,13 @@
 </tr>
 
 <tr>
+<td>Air Pirates Funnies</td>
+<td>1971</td>
+<td>Hell Comics</td>
+<td><a href="AirPirates/AirPirates.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Air Raiders</td>
 <td>1987</td>
 <td>Marvel</td>
