--- a/index.html
+++ b/index.html
@@ -1638,6 +1638,13 @@
 </tr>
 
 <tr>
+<td>Amazing Heroes</td>
+<td>1981</td>
+<td>Fantagraphics</td>
+<td><a href="AmazingHeroes/AmazingHeroes.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Amazing High Adventure</td>
 <td>1984</td>
 <td>Marvel</td>
