--- a/index.html
+++ b/index.html
@@ -4468,13 +4468,6 @@
 </tr>
 
 <tr>
-<td>Comical Tragedy of Mr. Punch</td>
-<td>1994</td>
-<td>Vertigo</td>
-<td><a href="MrPunch/MrPunch.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Comic Book History Of Comics</td>
 <td>2016</td>
 <td>IDW</td>
@@ -4493,6 +4486,20 @@
 <td>1952</td>
 <td>Publisher</td>
 <td><a href="ComicMedia/ComicMedia.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Comic Reader</td>
+<td>1961</td>
+<td>Street Enterprises</td>
+<td><a href="ComicReader/ComicReader.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Comical Tragedy of Mr. Punch</td>
+<td>1994</td>
+<td>Vertigo</td>
+<td><a href="MrPunch/MrPunch.html">Details</a></td>
 </tr>
 
 <tr>
