--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Media</title>
+<title>Creativity</title>
 <link rel="stylesheet" href="ZimStyles.css">
 <link rel="shortcut icon" href="bulb.ico">
 </head>
 <body>
 
 <img src="kb.jpg" title="Creativity" style="float: left" hspace="10">
-<b>Media</b> &nbsp; <a href="#a">a</a> <a href="#b">b</a> <a href="#c">c</a> <a href="#d">d</a> <a href="#e">e</a> <a href="#f">f</a> 
+<b>Creativity</b> &nbsp; <a href="#a">a</a> <a href="#b">b</a> <a href="#c">c</a> <a href="#d">d</a> <a href="#e">e</a> <a href="#f">f</a> 
 <a href="#g">g</a> <a href="#h">h</a> <a href="#i">i</a> <a href="#j">j</a> <a href="#k">k</a> <a href="#l">l</a> 
 <a href="#m">m</a> <a href="#n">n</a> <a href="#o">o</a> <a href="#p">p</a> 
 <a href="#q">q</a> <a href="#r">r</a> <a href="#s">s</a> <a href="#t">t</a> <a href="#u">u</a> <a href="#v">v</a> 
