--- a/index.html
+++ b/index.html
@@ -4544,7 +4544,6 @@
 <td><a href="ComicsScene/ComicsScene.html">Details</a></td>
 </tr>
 
-
 <tr>
 <td>Comix Book</td>
 <td>1974</td>
@@ -14566,6 +14565,13 @@
 <td>1962</td>
 <td>Archie</td>
 <td><a href="Sabrina/Sabrina.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sabrina</td>
+<td>2018</td>
+<td>Drawn &amp; Quarterly</td>
+<td><a href="DrnasoSabrina/DrnasoSabrina.html">Details</a></td>
 </tr>
 
 <tr>
