--- a/index.html
+++ b/index.html
@@ -572,6 +572,13 @@
 </tr>
 
 <tr>
+<td>Abbeville Press</td>
+<td>1978</td>
+<td>Publisher</td>
+<td><a href="AbbevillePress/AbbevillePress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Abbott and Costello</td>
 <td>1935</td>
 <td>Creator</td>
