--- a/WarpGraphics/WarpGraphics.html
+++ b/WarpGraphics/WarpGraphics.html
@@ -20,7 +20,7 @@
 
 <div class="mySlides" style="text-align: center;"><img src="Warp1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Warp2.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Warp3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../ADistantSoil/ADistantSoil1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../Elfquest/Elfquest01.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Warp4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Warp5.jpg"></div>
@@ -44,7 +44,7 @@ Warp was also the original publisher of A Distant Soil by Colleen Doran, until D
 Titles
 </p><p>
 <li><a href="Warp2.jpg">Blood of the Innocent</a> (1986)
-<li><a href="Warp3.jpg">A Distant Soil (1983)
+<li><a href="../ADistantSoil/ADistantSoil.html">A Distant Soil (1983)
 <li><a href="Warp4.jpg">Elflord (1997)
 <li><a href="../Elfquest/Elfquest.html">Elfquest</a> (1978)
 <li><a href="Warp5.jpg">FantaSci (1986)
