--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
 </tr>
 
 <tr>
+<td>3 Geeks</td>
+<td>1997</td>
+<td>3 Finger Prints</td>
+<td><a href="3FingerPrints/3FingerPrints.html">Details</a></td>
+</tr>
+
+<tr>
 <td>3 Story Secret History </td>
 <td>2009</td>
 <td>Dark Horse</td>
@@ -422,6 +429,13 @@
 </tr>
 
 <tr>
+<td>A Distant Soil</td>
+<td>1983</td>
+<td>Warp</td>
+<td><a href="ADistantSoil/ADistantSoil.html">Details</a></td>
+</tr>
+
+<tr>
 <td>A Fine Line Press</td>
 <td>1997</td>
 <td>Publisher</td>
@@ -447,7 +461,7 @@
 <td>1998</td>
 <td>Publisher</td>
 <td><a href="ASilent/ASilent.html">Details</a></td>
-</tr
+</tr>
 
 <tr>
 <td>A Wave Blue World</td>
@@ -6529,7 +6543,7 @@
 <tr>
 <td>Elfquest</td>
 <td>1978</td>
-<td>WARP Graphics</td>
+<td>Warp</td>
 <td><a href="Elfquest/Elfquest.html">Details</a></td>
 </tr>
 
@@ -10933,6 +10947,13 @@
 </tr>
 
 <tr>
+<td>Mad Hunda Day Day</td>
+<td>1995</td>
+<td>Thaumaturge</td>
+<td><a href="MadHundaDayDay/MadHundaDayDay.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mad-Dog</td>
 <td>1993</td>
 <td>Marvel</td>
@@ -13373,6 +13394,13 @@
 <td>1991</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="PalookaVille/PalookaVille.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Panda Khan</td>
+<td>1987</td>
+<td>Abacus</td>
+<td><a href="PandaKhan/PandaKhan.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16721,6 +16749,13 @@
 <td>1925</td>
 <td>Cupples &amp; Leon</td>
 <td><a href="TillieTheToiler/TillieTheToiler.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tim Burton</td>
+<td>1958</td>
+<td>Creator</td>
+<td><a href="TimBurton/TimBurton.html">Details</a></td>
 </tr>
 
 <tr>
