--- a/PageTemplate.html
+++ b/PageTemplate.html
@@ -19,8 +19,7 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
-
+<div class="mySlides" style="text-align: center;"><img src=".jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
