--- a/MadHundaDayDay/MadHundaDayday.html
+++ b/MadHundaDayDay/MadHundaDayday.html
@@ -20,15 +20,29 @@
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="MadHundaDayDay1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MadHundaDayDay2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MadHundaDayDay3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FineLines1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FineLines2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MadHundaDayDay1_1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MadHundaDayDay1_2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MadHundaDayDay1_3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MadHundaDayDay2_1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MadHundaDayDay2_2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MadHundaDayDay2_3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MadHundaDayDay3_1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MadHundaDayDay3_2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MadHundaDayDay3_3.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-1 issue in 1995 by Thaumaturge, their only title, from Carpentersville, IL. Creator Tim Baer said that issue one took over a year to make, so it isn’t surprising it takes well over an hour to read. Each page contains a wealth of detail. 
+<a href="https://www.laggingedge.com/About_Comics.html">Thaurmaturge</a> home published, 3 issues around 1995 from Carpentersville, IL. Creator Tim Baer said that issue one took over a year to make, so it isn’t surprising it takes well over an hour to read. Each page contains a wealth of detail. Other titles include 2 issues of Fine Lines.
 </p><p>
 In the story, Earth has become a place of the odd, the bizarre, and the alien. Creatures of various misproportions have come to our world to make it their home. The Mad Hunda is a native of our planet, but he, too, has his physical inconstancies and crazy idiosyncrasies.
-
+</p><p>
+Bare-footed, stuttering orphan, Thomas Hunda studies the ancient martial art of netting under Master Sooo before going to Big City. He soon confronts the criminal boss, Coolie McCool, but their fight is interrupted by the arrival of the unusual space-being, the balloon-headed Bahhh who quickly defeats them both. Mr. Nose arrives on the scene, takes him to his lair and introduces the MHDD (Mad Hunda Day-Day) to the other members of his crack fighting team, DO and Mmphh and together they attempt to save the City from the monstrous Bahhh.
 </p>
 
 </body>
