--- a/index.html
+++ b/index.html
@@ -1250,6 +1250,13 @@
 </tr>
 
 <tr>
+<td>Alex</td>
+<td>2006</td>
+<td>Fantagraphics</td>
+<td><a href="Alex/Alex.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Alex Grey</td>
 <td>1953</td>
 <td>Creator</td>
@@ -2065,6 +2072,13 @@
 </tr>
 
 <tr>
+<td>Ape City</td>
+<td>1990</td>
+<td>Malibu</td>
+<td><a href="ApeCity/ApeCity.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Apex Novelties</td>
 <td>1968</td>
 <td>Publisher</td>
@@ -2230,6 +2244,13 @@
 <td>1953</td>
 <td>Creator</td>
 <td><a href="ArthurSuydam/ArthurSuydam.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ashley Dust</td>
+<td>1994</td>
+<td>Knight Press</td>
+<td><a href="AshleyDust/AshleyDust.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7401,6 +7422,13 @@
 <td>2004</td>
 <td>Dark Horse</td>
 <td><a href="FreaksOfHeartland/FreaksOfHeartland.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Freeway</td>
+<td>2011</td>
+<td>Fantagraphics</td>
+<td><a href="Alex/Alex.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14313,6 +14341,13 @@
 <td>2013</td>
 <td>Creator</td>
 <td><a href="RickJacobi/RickJacobi.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rick McCollum</td>
+<td>1954</td>
+<td>Creator</td>
+<td><a href="RickMcCollum/RickMcCollum.html">Details</a></td>
 </tr>
 
 <tr>
