--- a/index.html
+++ b/index.html
@@ -2486,6 +2486,13 @@
 </tr>
 
 <tr>
+<td>Az</td>
+<td>1983</td>
+<td>Comico</td>
+<td><a href="Az/Az.html">Details</a></td>
+</tr>
+
+<tr>
 <td><a name ="b">B.P.R.D.</td>
 <td>2002</td>
 <td>Dark Horse</td>
@@ -5536,6 +5543,13 @@
 <td>1973</td>
 <td>Marvel</td>
 <td><a href="DeadOfNight/DeadOfNight.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dead World</td>
+<td>1986</td>
+<td>Arrow</td>
+<td><a href="DeadWorld/DeadWorld.html">Details</a></td>
 </tr>
 
 <tr>
