--- a/Answer/Answer.html
+++ b/Answer/Answer.html
@@ -2,15 +2,34 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>The Answer</title>
 </head>
 
 <body>
-<img src="Answer.jpg"> <br>
+<img src="Answer1.jpg"> <br>
 4 issues 2013 Dark Horse<br>
 Illustrator: Mike Horton, Writer: Dennis Hopeless, Mike Norton
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Answer1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Answer2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Answer3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Answer4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnswerTPB.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Devin McKenzie is an insomniac librarian with a knack for solving puzzles. The Answer! is a masked crime fighter with a giant exclamation point on his face. Aside from a penchant for late nights, they share nothing in common... until both become embroiled in a deadly mystery surrounding a sinister motivational speaker.
 </p>
 </body>
