--- a/index.html
+++ b/index.html
@@ -16059,6 +16059,13 @@
 </tr>
 
 <tr>
+<td>Steve Bissette</td>
+<td>1952</td>
+<td>Creator</td>
+<td><a href="SteveBissette/SteveBissette.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Steve Dillon</td>
 <td>1962</td>
 <td>Creator</td>
