--- a/SteveBissette/SteveBissette.html
+++ b/SteveBissette/SteveBissette.html
@@ -29,6 +29,8 @@
 <div class="mySlides" style="text-align: center;"><img src="Bissette8.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Bissette9.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Bissette10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bissette11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Bissette12.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -36,7 +38,7 @@
 </p><p>
 Stephen R. Bissette (born March 14, 1955) is an American comics artist, editor, and publisher with a focus on the horror genre. He is known for working with writer Alan Moore and inker John Totleben on the DC Comics series Swamp Thing in the 1980s. Under the company name of Spiderbaby Grafix, he later published the horror anthology Taboo, the original home of Moore and Eddie Campbell's From Hell and Tim Lucas' Throat Sprockets illustrated by Mike Hoffman and David Lloyd. He created Tyrant, a comic book biography of a Tyrannosaurus rex, which lasted four issues. During this period, he edited the horror anthology Gore Shriek, published by FantaCo Enterprises.
 </p><p>
-Since 1991, Bissette has presented a lecture series on horror comics called "Journeys into Fear". Having since grown in scope into a five-part series, "Journeys into Fear" identifies 12th century Japanese ghost scrolls[9][10] and the 16th Century Mixtec codices as early ancestors, and traces the genre from its roots in Winsor McCay's work such as Dream of the Rarebit Fiend. In 1996–1997, Bissette contributed five covers for a comic book series about another swamp monster, Hall of Heroes' Bog Swamp Demon. 
+Since 1991, Bissette has presented a lecture series on horror comics called "Journeys into Fear". Having since grown in scope into a five-part series, "Journeys into Fear" identifies 12th century Japanese ghost scrolls and the 16th Century Mixtec codices as early ancestors, and traces the genre from its roots in Winsor McCay's work such as Dream of the Rarebit Fiend. In 1996–1997, Bissette contributed five covers for a comic book series about another swamp monster, Hall of Heroes' Bog Swamp Demon. 
 </p>
 
 </body>
