Blue Comet Press

--- a/index.html
+++ b/index.html
@@ -3440,6 +3440,13 @@
 </tr>
 
 <tr>
+<td>Blue Comet Press</td>
+<td>1986</td>
+<td>Publisher</td>
+<td><a href="BlueCometPress/BlueCometPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Blueberry</td>
 <td>1989</td>
 <td>Marvel</td>
@@ -10615,6 +10622,13 @@
 <td>1991</td>
 <td>Epic</td>
 <td><a href="LieutenantBlueberry/LieutenantBlueberry.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Life Brigade</td>
+<td>1986</td>
+<td>Blue Comet Press</td>
+<td><a href="LifeBrigade/LifeBrigade.html">Details</a></td>
 </tr>
 
 <tr>
